# Homa

./: main.py  pyproject.toml
.claude/: settings.local.json
services/: hl_account.py  hl_market.py  indicators.py  schema.py  testin.py
services/agents/: action_node.py  agents_schema.py  analyst_agents.py  cto_agent.py  desk_manager.py  graph.py  hl_input_node.py  money_manager.py  news_agent.py  psych_agent.py  sentinel_agent.py  state_schema.py  test.py
tests/: analyst_test.py  hl_test.py
